[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdbfixer-wheel"
version = "1.11.0"
authors = [
  { name="Peter Eastman"},
  { name="Abhishek Tiwari"}
]
description = "Fork of pdbfixer (https://github.com/openmm/pdbfixer) to be able to pip install it."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2", 
    "openmm >= 7.1"
]
[project.urls]
"Homepage" = "https://github.com/abhishektiwari/pdbfixer-wheel"
"Bug Tracker" = "https://github.com/abhishektiwari/pdbfixer-wheel/issues"

